_sass/override.scss
/* as long as is is not fixed in the forked repo */
.single-post .post-content {
    iframe {
        min-height: 350px;
    }
}

ol {
    width: 90%;
    /*max-width: 650px; done by Ajay G*/  
    margin-left: auto;
    margin-right: auto;
    word-wrap: break-word;
}

.go-to-top {
    &:focus {
        outline: none;
        opacity: 1;
    }
}

pre, pre[class*="language-"] {    
    margin-bottom: 1.8em!important; /* override prism.js css */
}

